<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quick Translate</string>
    <string name="from_text">From:</string>
    <string name="to_text">To:</string>
    <string name="original_hint">Input text to translate</string>
    <string name="back_text"></string>
    <string name="empty"></string>
    <string name="translating">Translating...</string>
    <string name="translation_error">(Network Error)</string> 
    <string name="translation_interrupted">(Translation Interrupted)</string>  
    <string name="about_title">About</string> 
    <string name="exit_title">Exit</string> 
    <string name="share_title">Share</string>
    <string name="clear_title">Clear</string>
    <string name="search_title">Search</string>
    <string name="change_title">Switch</string>
    <string name="vr_title">VR</string>
    <string name="tts_title">TTS</string>
    <string name="preference_title">Preferences</string>
    <string name="fuzzy_pref_title">Enable Fuzzy Translation</string>
    <string name="fuzzy_pref_summary">Automatically detect source language</string>
    <string name="search_pref_title">Search Engine</string>
    <string name="search_pref_summary">Select preferred search engine</string>
    <string name="vr_pref_title">Voice Recognition</string>
    <string name="vr_pref_summary">Use voice recognition as text input, Please note, you have to install Google Voice Search before use this feature.</string>
	<string name="upgrade_pref_title">Upgrade to Pro Version</string>
	<string name="upgrade_pref_summary">Link to Android Market, download Pro Version</string>
    <string name="ok_label">OK</string>
    
<string name="license">Copyright (c) 2012 oddsoft (ccjeng@google.com)\n\n
Quick Translate v.2.5.3
\nA lightweight language translation tool. Use Bing translate service to translate between language pairs.
\n
\nFeatures:
\n- 36 language translation.
\n- Provide From/To language switch function.
\n- Provide Share function (you can share translated text to Twitter, Facebook, email, SMS..etc)
\n- Automatically detect source language
\n- Search translated text into preferred search engine
\n\nTo better improve this app, we use Google Analysis to collect user\'s activity anonymously.
\n\n
THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
THE SOFTWARE.
</string>
<string name="license_intro"></string>

<string name="app_picker_name">Applications</string>
  <string name="msg_bulk_mode_scanned">Bulk mode: barcode scanned and saved</string>
  <string name="msg_camera_framework_bug">Sorry, the Android camera encountered a problem. You may need to restart the device.</string>
  <string name="msg_default_contents">Contents</string>
  <string name="msg_default_format">Format</string>
  <string name="msg_default_meta">Metadata</string>
  <string name="msg_default_mms_subject">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_status">Place a barcode inside the viewfinder rectangle to scan it.</string>
  <string name="msg_default_time">Time</string>
  <string name="msg_default_type">Type</string>
  <string name="msg_encode_barcode_failed">Could not generate the requested barcode.</string>
  <string name="msg_encode_contents_failed">Could not encode a barcode from the data provided.</string>
  <string name="msg_intent_failed">Sorry, the requested application could not be launched. The barcode contents may be invalid.</string>
  <string name="msg_loading_apps">Loading list of applications\u2026</string>
  <string name="msg_not_our_results">You are leaving this application. The search results you will see are not related to this application.</string>
  <string name="msg_redirect">Redirect</string>
  <string name="msg_sbc_book_not_searchable">Sorry, this book is not searchable.</string>
  <string name="msg_sbc_failed">Sorry, the search encountered a problem.</string>
  <string name="msg_sbc_no_page_returned">No page returned</string>
  <string name="msg_sbc_page">Page</string>
  <string name="msg_sbc_searching_book">Searching book\u2026</string>
  <string name="msg_sbc_snippet_unavailable">Snippet not available</string>
  <string name="msg_sbc_unknown_page">Unknown page</string>
  <string name="msg_share_explanation">You can share data by displaying a barcode on your screen and scanning it with another phone.</string>
  <string name="msg_share_subject_line">Here are the contents of a barcode I scanned</string>
  <string name="msg_share_text">Or type some text and press Enter</string>
  <string name="msg_unmount_usb">Sorry, the SD card is not accessible.</string>    
</resources>
