<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/Ad"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="0">
        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            app:adSize="SMART_BANNER"
            app:adUnitId="ca-app-pub-6914084100751028/3864312812">
        </com.google.android.gms.ads.AdView>
    </LinearLayout>

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:stretchColumns="1"
        android:layout_weight="1">
        <TableRow>
            <TextView
                android:id="@+id/from_text"
                android:text="@string/from_text"/>
            <Spinner
                android:id="@+id/from_language" />
        </TableRow>
        <TableRow>
            <TextView
                android:id="@+id/to_text"
                android:text="@string/to_text"/>
            <Spinner
                android:id="@+id/to_language"/>
        </TableRow>
    </TableLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:id="@+id/translated_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:layout_weight="0.8"
            android:textSize="20sp"
            android:textColor="#FF0000"
            android:isScrollContainer="false"
            android:singleLine="false" />
        <EditText
            android:id="@+id/original_text"
            android:hint="@string/original_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:padding="0dp"
            android:textSize="20sp"
            android:gravity="center_vertical"
            android:linksClickable="false"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom" >
        <Button android:id="@+id/clear_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_delete"
            android:layout_gravity="center"
            />
        <Button android:id="@+id/change_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_revert"
            android:layout_gravity="center"
            />
        <Button android:id="@+id/search_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:layout_gravity="center"
            />
        <Button android:id="@+id/share_button"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableLeft="@android:drawable/ic_menu_share"
            android:layout_gravity="center"
            />
    </LinearLayout>

</LinearLayout>
